@@ -60,6 +60,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - No longer report a completion code if a job is pre-empted using qrerun. 
   c - Fix a crash in record_jobinfo() - this is fixed by backporting dynamic strings from
       4.0.0 so that all of the resizing is done in a central location, fixing the crash.
+  b - No longer count down walltime for jobs that are suspending or have stopped running 
+      for any other reasons
 
 3.0.2
   c - check if the file pointer to /dev/console can be opened. If not, don't attempt to write it
